# Nanoai

./: .gitignore  Cargo.toml  LICENSE  README.md  pre_quality.ps1
docs/: api_examples.md  architecture.md  lib_comments.md
examples/: README.md  advanced_usage.rs  basic_usage.rs  batch.rs  concurrent_chat.rs  quick_start.rs  streaming.rs  streaming_example.rs  test_examples.rs
src/: client.rs  config.rs  error.rs  lib.rs  stream.rs  types.rs  utils.rs
