[package]
name = "nanoai"
version = "0.1.0"
authors = ["ishanwen <ishanwen@github.com>"]
edition = "2021"
description = "A simple nano AI client Power by Rust"
license = "MIT"
repository = "https://github.com/ishanwen-byte/Nanoai"
keywords = ["ai", "nano", "rust"]
categories = ["ai"]

[dependencies]
async-stream = "0.3"
reqwest = { version = "0.12", features = ["json", "stream", "native-tls-vendored"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
log = "0.4"
backoff = "0.4.0"
bytes = "1.6.0"
fastrand = "2.1.0"
dotenv = "0.15.0"
tempfile = "3.10.1"
lazy_static = "1.4.0"
paste = "1.0"

# Clippy 配置
[lints.clippy]
uninlined_format_args = "allow"        # 允许未内联的格式化参数
useless_vec = "allow"                  # 允许不必要的 vec! 宏
single_component_path_imports = "allow" # 允许单组件路径导入

[profile.release]
opt-level = "s"       # 优化代码尺寸，兼顾速度
lto = "fat"           # 启用最大程度的链接时优化
codegen-units = 1     # 降低代码生成单元数，增加优化时间但提升性能
panic = "abort"       # 使用 'abort' 而不是 'unwind' 来处理 panic
strip = "symbols"     # 移除符号信息
